Issue #13 : Edited bug of Menu
Menu was not showing properly in line and that is why the dropdown menu also facing some problem. not, it is fixed and good enough.

--- a/Project Code/home.css
+++ b/Project Code/home.css
@@ -19,6 +19,10 @@ ul{
 
 ul li{
   display: inline-block;
+  width: 140px;
+  height: 35px;
+  text-align: center;
+  float: left;
 }
 
 ul li a{
